--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@ font-awesome/5.15.2/css/all.min.css"
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Adithyan K P</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
