--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,18 @@ font-awesome/5.15.2/css/all.min.css"
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Adithyan K P</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gudea:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
