--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,19 @@ font-awesome/5.15.2/css/all.min.css"
       rel="stylesheet"
     />
   </head>
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=UA-249945426-1"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "UA-249945426-1");
+  </script>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
